--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,38 +1,37 @@
 .App {
   text-align: center;
+  border: 2px solid #63d6f9;
+  width: 250px;
+  border-radius: 7.5px;
+  padding: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.tablo {
+  background-color: #63d6f9;
+  padding: 20px;
+  font-size: 60px;
+  font-weight: bold;
+  border-radius: 10px;
+  margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.tabloRed {
+  color: red;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.buttons {
+  border: 3px solid #63d6f9;
+  border-radius: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding: 20px ;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  background-color: #63d6f9;
+  border: 0;
+  font-size: 30px;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 10px 10px 0;
 }
