--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,15 +1,25 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.Counter {
+  margin-left: 50px;
+}
+
+
+.Counter, .CounterConfig {
   border: 2px solid #63d6f9;
-  width: 250px;
+  width: 400px;
   border-radius: 7.5px;
   padding: 20px;
 }
 
 .tablo {
   background-color: #63d6f9;
-  padding: 20px;
-  font-size: 60px;
+  padding: 40px;
+  font-size: 49px;
   font-weight: bold;
   border-radius: 10px;
   margin-bottom: 20px;
@@ -27,6 +37,12 @@
   padding: 20px ;
 }
 
+.setButton {
+  border: 3px solid #63d6f9;
+  border-radius: 10px;
+  padding: 20px;
+}
+
 .button {
   background-color: #63d6f9;
   border: 0;
@@ -34,4 +50,45 @@
   font-weight: bold;
   border-radius: 5px;
   padding: 10px 10px 0;
+}
+
+.text {
+  color: #63d6f9;
+  font-size: 30px;
+  font-weight: bolder;
+}
+.inputConfig {
+  width: 160px;
+  text-align: center;
+}
+
+.inputConfig:focus {
+  outline: none;
+  border: 3px solid #63d6f9;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.TabloConfig {
+  display: flex;
+  justify-content: space-between;
+}
+
+.configs {
+  border: 3px solid #63d6f9;
+  border-radius: 10px;
+  padding: 20px 20px;
+  margin-bottom: 20px;
+}
+
+.TabloConfig:first-child {
+  margin-bottom: 30px;
+}
+
+.inputError {
+  outline: none;
+  border-radius: 5px;
+  border: 2px solid red;
+  background-color: #fc637f;
 }
